--- a/.github/workflows/mirror-bot.yml
+++ b/.github/workflows/mirror-bot.yml
@@ -10,7 +10,7 @@ env:
   # Change these values if you have forked it for your own works
   GitHubMail: "hiteshkamble920@gmail.com"
   GitHubName: "hitesh920" 
-  Branch: "master"
+  Branch: "hitesh920"
 
 jobs:
   build:
@@ -28,7 +28,7 @@ jobs:
           echo "https://${GitHubName}:${{ secrets.GH_TOKEN }}@github.com" > ~/.git-credentials
 
       # Cleanup The Actions Workspace Using Custom Composite Run Actions
-      - uses: rokibhasansagar/slimhub_actions@main
+      #- uses: rokibhasansagar/slimhub_actions@main
 
       - name: Clone The Secret Mirror Repository
         run: |
@@ -42,19 +42,19 @@ jobs:
           docker image ls
 
       - name: running Docker
-        timeout-minutes: 340
+        timeout-minutes: 10
         continue-on-error: true
         run: |
           docker run --privileged --rm -i mirror-bot
 
-      - name: Loop Workflow
-        continue-on-error: true
-        run: |
-          # ${GITHUB_REPOSITORY} is the repo slug which runs this script
-          git clone https://${{ secrets.GH_TOKEN }}@github.com/${GITHUB_REPOSITORY} loop
-          cd loop || exit 1
-          echo $(( RANDOM - ( RANDOM % RANDOM ) )) > looper.txt
-          git add looper.txt
-          git commit -m "Workflow : Loop"
-          git push -q https://${{ secrets.GH_TOKEN }}@github.com/${GITHUB_REPOSITORY} HEAD:main
+      #- name: Loop Workflow
+      #  continue-on-error: true
+      #  run: |
+      #    # ${GITHUB_REPOSITORY} is the repo slug which runs this script
+      #    git clone https://${{ secrets.GH_TOKEN }}@github.com/${GITHUB_REPOSITORY} loop
+      #    cd loop || exit 1
+      #    echo $(( RANDOM - ( RANDOM % RANDOM ) )) > looper.txt
+      #    git add looper.txt
+      #    git commit -m "Workflow : Loop"
+      #    git push -q https://${{ secrets.GH_TOKEN }}@github.com/${GITHUB_REPOSITORY} HEAD:main
 
