--- a/.github/workflows/mirror-bot.yml
+++ b/.github/workflows/mirror-bot.yml
@@ -1,10 +1,6 @@
 name: Deploy
 
-on:
-  push:
-    branches: [ main ]
-    paths-ignore: 'README.md'
-  workflow_dispatch:
+on: workflow_dispatch
    
 env:
   # Change these values if you have forked it for your own works
