--- a/.github/workflows/mirror-bot.yml
+++ b/.github/workflows/mirror-bot.yml
@@ -6,7 +6,7 @@ env:
   # Change these values if you have forked it for your own works
   GitHubMail: "hiteshkamble920@gmail.com"
   GitHubName: "hitesh920" 
-  Branch: "hitesh920"
+  Branch: "master"
 
 jobs:
   build:
